<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/one_day"
        android:icon="@drawable/ic_launcher"
        android:title="@string/hour">
    </item>
    <item
        android:id="@+id/five_day"
        android:icon="@drawable/ic_launcher"
        android:title="@string/five_day">
    </item>
    <item
        android:id="@+id/fifteen_day"
        android:icon="@drawable/ic_launcher"
        android:title="@string/fifteen_day">
    </item>
    <item
        android:id="@+id/thirty_day"
        android:icon="@drawable/ic_launcher"
        android:title="@string/thirty_day">
    </item>
    <item
        android:id="@+id/ninty_day"
        android:icon="@drawable/ic_launcher"
        android:title="@string/ninty_day">
    </item>
    <item
        android:id="@+id/three_hundred_sixty_day"
        android:icon="@drawable/ic_launcher"
        android:title="@string/three_hundred_sixty_day">
    </item>
</menu>