<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/large_item"
    android:orientation="horizontal"
    android:gravity="center"
    android:baselineAligned="false"
    android:layout_margin="2dp" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.3" >

        <TextView
            android:id="@+id/service_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_valid" 
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/contract_extension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/contract_extension" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.7"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_name" />

        <TextView
            android:id="@+id/service_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_startTime" />

        <TextView
            android:id="@+id/service_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_deadline" />

        <TextView
            android:id="@+id/service_providerUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_providerUnit" />

        <TextView
            android:id="@+id/service_providerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_providerName" />
    </LinearLayout>

</LinearLayout>
