<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="150dp" >

        <EditText
            android:id="@+id/tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_tel"
            android:inputType="number"
            android:labelFor="@+id/tel" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/input_tel_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tel"
            android:gravity="center"
            android:text="@string/input_tel_prompt" />

        <LinearLayout
            android:id="@+id/layout_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/identity_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_identity_code"
                android:labelFor="@+id/identity_code" />

            <Button
                android:id="@+id/request_identity_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_identity_code" >
            </Button>
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/layout_code"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:labelFor="@+id/password" />

        <Button
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@id/password"
            android:layout_alignParentBottom="true"
            android:text="@string/skip" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/bottom_bg" >

        <Button
            android:id="@+id/back"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/next_step"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/back"
            android:layout_alignBottom="@id/back"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/next_step" />
    </RelativeLayout>

</RelativeLayout>