<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <Button
        android:id="@+id/wechat_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wechat_pay" />

    <Button
        android:id="@+id/alipay_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wechat_pay"
        android:text="@string/alipay_pay" />

    <Button
        android:id="@+id/code_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alipay_pay"
        android:text="@string/code_pay" />

</RelativeLayout>